[gd_scene load_steps=5 format=3 uid="uid://mvgqexoicvvq"]

[ext_resource type="Script" uid="uid://cvaeqiov1ieud" path="res://scripts/dialogue.gd" id="1_jwyou"]
[ext_resource type="AudioStream" uid="uid://28d7i87lciy3" path="res://assets/Audio/typing.wav" id="2_3n4vj"]
[ext_resource type="FontFile" uid="uid://28sifdg4rulo" path="res://assets/Fonts/ThaleahFat.ttf" id="2_fyky8"]
[ext_resource type="Script" uid="uid://c8i7x2bq713fd" path="res://scripts/dialogue_voice_player.gd" id="3_bfpow"]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_jwyou")

[node name="Content" type="RichTextLabel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -28.0
offset_right = -185.0
offset_bottom = 71.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("2_fyky8")
theme_override_font_sizes/normal_font_size = 30
fit_content = true

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3n4vj")
volume_db = -10.0
pitch_scale = 0.5
script = ExtResource("3_bfpow")

[connection signal="timeout" from="TypeTimer" to="." method="_on_type_typer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
